# fractions-simple

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  xmake.lua
.github/workflows/: ci.yml  cmake.yml  release.yml  xmake.yml
include/fraction/: fraction.hpp
tests/: benchmark_fraction.cpp  test_fraction.cpp
